@startuml 实验通信框架库结构图

skinparam handwritten false
skinparam monochrome false
skinparam shadowing true
skinparam defaultFontName "微软雅黑"
skinparam defaultFontSize 14
skinparam roundCorner 15
skinparam ClassBackgroundColor #AED6F1
skinparam ClassBorderColor #2874A6
skinparam PackageBackgroundColor #D6EAF8
skinparam PackageBorderColor #2E86C1
skinparam ArrowColor #3498DB
skinparam TitleFontSize 20
skinparam TitleFontColor #2C3E50
skinparam TitleFontStyle bold

title 实验通信框架库结构图

package "SpinQPie_Client" {
    package "spinqlablink" {
        class SpinQLabLink {
            - connection: TCPConnection
            - protocol: Protocol
            - expMgr: ExperimentManager
            - device: Device
            - handler_map: Dict
            - exp_handler_map: Dict
            
            + connect(): bool
            + disconnect(): bool
            + register_experiment(experiment_type: ExperimentType): Tuple[Experiment, ExperimentParameter]
            + run_experiment(): void
            + wait_for_experiment_completion(): bool
            + get_experiment_result(): Dict
        }

        package "connection" {
            class TCPConnection {
                + connect(): bool
                + disconnect(): bool
                + send(data: bytes): bool
                + set_message_callback(callback: Callable): void
            }
            
            class Protocol {
                + serialize_message(msg_id: str, metadata: dict, json_data: dict): bytes
                + deserialize_message(data: bytes): Tuple[bool, dict]
            }
        }

        package "devices" {
            class Device {
                - device_id: str
                - device_type: str
                - device_params: dict
                
                + set_device_params(device_params: dict): void
            }
        }

        package "experiment" {
            class ExperimentManager {
                - current_experiment: Experiment
                - current_experiment_params: ExperimentParameter
                
                + register_experiment(experiment_type: ExperimentType, handler_map: dict): Tuple[Experiment, ExperimentParameter]
                + get_experiment_parameter(): Dict
                + wait_for_experiment_completion(): bool
                + get_experiment_result(): Dict
            }

            abstract class Experiment {
                - id: str
                - state: str
                - parameters: ExperimentParameter
                - result: ExperimentResult
                
                + register_handler(handler_map: dict): void
                {abstract} + get_experiment_parameter(): Dict
                {abstract} + handle_exp_added(data: Dict): void
                {abstract} + handle_exp_started(data: Dict): void
                {abstract} + handle_exp_finished(data: Dict): void
                {abstract} + get_status(): str
                {abstract} + get_result(): Dict
            }

            abstract class ExperimentParameter {
                {abstract} + get_parameters(): Dict
            }

            class ExperimentResult {
                {abstract} + get_result(): Dict
            }

            class ExperimentState {
                + PENDING: str
                + RUNNING: str
                + COMPLETED: str
                + FAILED: str
            }
            
            class "各种实验类" as ExpTypes {
                ExpPulse, ExpRabi, ExpQubit, 
                ExpT1, ExpT2, ExpQControl等
            }
            
            class "各种实验参数类" as ExpParamTypes {
                ExpPulseParameters, ExpRabiParameters等
            }
        }

        package "utils" {
            class LoggerManager {
                + {static} get_logger(name: str): Logger
            }
            
            class MachineType {
                + 各种消息类型常量
            }
            
            class ExperimentType {
                + 各种实验类型常量
            }
        }
    }
}

' 关系定义
SpinQLabLink --> TCPConnection: 使用
SpinQLabLink --> Protocol: 使用
SpinQLabLink --> Device: 管理
SpinQLabLink --> ExperimentManager: 管理
SpinQLabLink ..> MachineType: 使用

ExperimentManager --> Experiment: 创建
ExperimentManager --> ExperimentParameter: 创建
ExperimentManager ..> ExperimentType: 使用

Experiment --> ExperimentParameter: 包含
Experiment --> ExperimentResult: 包含
Experiment ..> ExperimentState: 使用
Experiment ..> MachineType: 使用

ExperimentManager ..> ExpTypes: 创建
ExperimentManager ..> ExpParamTypes: 创建

ExpTypes -up-|> Experiment: 继承
ExpParamTypes -up-|> ExperimentParameter: 继承

@enduml 